<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".vender">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/text_id"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/edit_text_id"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/numero"
            android:textSize="25sp"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_origen"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spinner_destino"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_fecha"/>

        <TextView
            android:id="@+id/tv_fecha_seleccionada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_fecha"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_hora"/>

        <TextView
            android:id="@+id/tv_hora_seleccionada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_hora"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/TextView_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="200dp"
            android:text="@string/text_total"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/Ttotal"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="@string/numero"
            android:textSize="25sp"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_guardar" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar"/>

    </LinearLayout>

</LinearLayout>
