<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".eliminar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editEliminar"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/text_ingresar"
            android:inputType="number"
            style="@style/EditTextStyle"/>

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btn_buscar"
            style="@style/ButtonPrimary"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_viewEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        style="@style/EditTextStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:padding="16dp">

        <Button
            android:id="@+id/btneliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_eliminar"
            style="@style/ButtonPrimary"/>

        <Button
            android:id="@+id/btcancelar_Regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_regresar"
            style="@style/ButtonPrimary"/>

    </LinearLayout>

</LinearLayout>