<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".consultar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edit_text_id_consultar"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/text_ingresar"
            android:inputType="number"
            style="@style/EditTextStyle"/>

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btn_buscar"
            style="@style/ButtonPrimary"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        style="@style/EditTextStyle"/>

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_gravity="center"
        android:text="@string/btn_regresar"
        style="@style/ButtonPrimary"/>

</LinearLayout>
